--- a/ColorSisters/Base.lproj/Main.storyboard
+++ b/ColorSisters/Base.lproj/Main.storyboard
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="jSO-EX-Mcd">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="8Ed-NA-WgO">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Camera View Controller-->
@@ -112,39 +111,24 @@
                             <outlet property="delegate" destination="toG-5d-dru" id="XEK-Bj-N8w"/>
                         </connections>
                     </tableView>
-                    <toolbarItems/>
+                    <toolbarItems>
+                        <barButtonItem title="Share" width="200" id="IiD-f3-XE5">
+                            <connections>
+                                <segue destination="G5m-H0-GUg" kind="show" id="Fnm-kx-TUE"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem systemItem="camera" id="Pqc-Mb-fQd">
+                            <connections>
+                                <segue destination="KGb-kh-VSH" kind="show" id="3yt-fl-KkC"/>
+                            </connections>
+                        </barButtonItem>
+                    </toolbarItems>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <segue destination="8Ed-NA-WgO" kind="show" identifier="detail" id="uRt-jO-kpf"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="t59-Vo-e7h" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <navigationBar contentMode="scaleToFill" id="0dD-9e-nfL">
-                    <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                    <items>
-                        <navigationItem title="Title" id="bzW-Fu-zm7">
-                            <barButtonItem key="rightBarButtonItem" systemItem="camera" id="Pqc-Mb-fQd">
-                                <connections>
-                                    <segue destination="KGb-kh-VSH" kind="show" id="3yt-fl-KkC"/>
-                                </connections>
-                            </barButtonItem>
-                        </navigationItem>
-                    </items>
-                </navigationBar>
-                <navigationBar contentMode="scaleToFill" id="64G-dT-qsN">
-                    <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                    <items>
-                        <navigationItem title="Title" id="jvj-Qj-Gr8" userLabel="Matches">
-                            <barButtonItem key="rightBarButtonItem" title="Share" width="200" id="IiD-f3-XE5">
-                                <connections>
-                                    <segue destination="G5m-H0-GUg" kind="show" id="Fnm-kx-TUE"/>
-                                </connections>
-                            </barButtonItem>
-                        </navigationItem>
-                    </items>
-                </navigationBar>
             </objects>
             <point key="canvasLocation" x="556.5" y="594"/>
         </scene>
@@ -156,17 +140,11 @@
                         <viewControllerLayoutGuide type="top" id="9fi-g7-3hN"/>
                         <viewControllerLayoutGuide type="bottom" id="nKS-pb-6Re"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="kqe-46-sUZ">
+                    <view key="view" contentMode="scaleAspectFill" id="kqe-46-sUZ">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="R2S-M3-cPj">
-                                <rect key="frame" x="180" y="237" width="240" height="128"/>
-                                <variation key="heightClass=regular" fixedFrame="YES">
-                                    <rect key="frame" x="0.0" y="0.0" width="0.0" height="0.0"/>
-                                </variation>
-                            </imageView>
-                            <navigationBar contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ulm-Ak-lRo">
+                            <navigationBar contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="Ulm-Ak-lRo">
                                 <rect key="frame" x="-36" y="7" width="600" height="44"/>
                                 <items>
                                     <navigationItem title="Match Details" id="MWL-Hd-1nC">
@@ -177,80 +155,49 @@
                                         </barButtonItem>
                                     </navigationItem>
                                 </items>
-                                <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
-                                    <rect key="frame" x="0.0" y="0.0" width="603" height="44"/>
+                                <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="0.0" y="20" width="400" height="44"/>
                                 </variation>
                             </navigationBar>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Page3" translatesAutoresizingMaskIntoConstraints="NO" id="hyV-Q9-K2E">
+                                <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                                <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="0.0" y="64" width="400" height="361"/>
+                                </variation>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gkV-1I-0f1">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <state key="normal" title="TODO:  Needs Matches image">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="16" y="346" width="209" height="30"/>
+                                </variation>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="R2S-M3-cPj" firstAttribute="leading" secondItem="Ulm-Ak-lRo" secondAttribute="leading" id="1Da-sl-Bzn"/>
-                            <constraint firstItem="Ulm-Ak-lRo" firstAttribute="top" secondItem="R2S-M3-cPj" secondAttribute="top" id="8Ed-nh-0cG"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="Ulm-Ak-lRo" secondAttribute="trailing" constant="-19" id="AVn-AE-0aI"/>
-                            <constraint firstItem="Ulm-Ak-lRo" firstAttribute="top" secondItem="R2S-M3-cPj" secondAttribute="bottom" id="Aiq-wl-gdx"/>
-                            <constraint firstItem="R2S-M3-cPj" firstAttribute="top" secondItem="kqe-46-sUZ" secondAttribute="top" id="OgS-J6-23k"/>
-                            <constraint firstItem="Ulm-Ak-lRo" firstAttribute="top" secondItem="R2S-M3-cPj" secondAttribute="top" id="czw-2M-j7L"/>
-                            <constraint firstItem="Ulm-Ak-lRo" firstAttribute="leading" secondItem="kqe-46-sUZ" secondAttribute="leading" id="eOZ-Qc-KUM"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="Ulm-Ak-lRo" secondAttribute="trailing" constant="-19" id="ftA-cS-CBS"/>
-                            <constraint firstItem="Ulm-Ak-lRo" firstAttribute="leading" secondItem="kqe-46-sUZ" secondAttribute="leading" id="hKC-dN-Ifo"/>
-                            <constraint firstItem="R2S-M3-cPj" firstAttribute="top" secondItem="kqe-46-sUZ" secondAttribute="top" id="jRb-hD-rdg"/>
-                            <constraint firstItem="Ulm-Ak-lRo" firstAttribute="leading" secondItem="R2S-M3-cPj" secondAttribute="trailing" id="mg7-ix-dDr"/>
-                            <constraint firstItem="Ulm-Ak-lRo" firstAttribute="leading" secondItem="R2S-M3-cPj" secondAttribute="leading" id="uSm-NW-arr"/>
-                            <constraint firstItem="Ulm-Ak-lRo" firstAttribute="top" secondItem="R2S-M3-cPj" secondAttribute="bottom" id="wvF-Tb-CPa"/>
-                            <constraint firstItem="Ulm-Ak-lRo" firstAttribute="leading" secondItem="R2S-M3-cPj" secondAttribute="trailing" id="z9K-e1-SI2"/>
-                        </constraints>
                         <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="8Ed-nh-0cG"/>
-                                <exclude reference="AVn-AE-0aI"/>
-                                <exclude reference="Aiq-wl-gdx"/>
-                                <exclude reference="czw-2M-j7L"/>
-                                <exclude reference="eOZ-Qc-KUM"/>
-                                <exclude reference="ftA-cS-CBS"/>
-                                <exclude reference="hKC-dN-Ifo"/>
-                                <exclude reference="mg7-ix-dDr"/>
-                                <exclude reference="uSm-NW-arr"/>
-                                <exclude reference="wvF-Tb-CPa"/>
-                                <exclude reference="z9K-e1-SI2"/>
-                                <exclude reference="1Da-sl-Bzn"/>
-                                <exclude reference="OgS-J6-23k"/>
-                                <exclude reference="jRb-hD-rdg"/>
+                            <mask key="subviews">
+                                <exclude reference="Ulm-Ak-lRo"/>
+                                <exclude reference="hyV-Q9-K2E"/>
+                                <exclude reference="gkV-1I-0f1"/>
                             </mask>
                         </variation>
-                        <variation key="widthClass=compact">
-                            <mask key="constraints">
-                                <include reference="Aiq-wl-gdx"/>
-                                <include reference="czw-2M-j7L"/>
-                                <include reference="eOZ-Qc-KUM"/>
-                                <include reference="ftA-cS-CBS"/>
-                                <include reference="z9K-e1-SI2"/>
-                                <include reference="1Da-sl-Bzn"/>
-                                <include reference="OgS-J6-23k"/>
-                            </mask>
-                        </variation>
-                        <variation key="heightClass=compact-widthClass=compact">
-                            <mask key="constraints">
-                                <include reference="8Ed-nh-0cG"/>
-                                <include reference="AVn-AE-0aI"/>
-                                <exclude reference="Aiq-wl-gdx"/>
-                                <exclude reference="czw-2M-j7L"/>
-                                <exclude reference="eOZ-Qc-KUM"/>
-                                <exclude reference="ftA-cS-CBS"/>
-                                <include reference="hKC-dN-Ifo"/>
-                                <include reference="mg7-ix-dDr"/>
-                                <include reference="uSm-NW-arr"/>
-                                <include reference="wvF-Tb-CPa"/>
-                                <exclude reference="z9K-e1-SI2"/>
-                                <exclude reference="1Da-sl-Bzn"/>
-                                <exclude reference="OgS-J6-23k"/>
-                                <include reference="jRb-hD-rdg"/>
+                        <variation key="heightClass=regular-widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="Ulm-Ak-lRo"/>
+                                <include reference="hyV-Q9-K2E"/>
+                                <include reference="gkV-1I-0f1"/>
                             </mask>
                         </variation>
                     </view>
+                    <toolbarItems>
+                        <barButtonItem style="plain" systemItem="flexibleSpace" id="lsw-jV-CnP"/>
+                    </toolbarItems>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SFK-Zy-hPW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-97.5" y="1557"/>
+            <point key="canvasLocation" x="556.5" y="1378.5"/>
         </scene>
         <!--Share View Controller-->
         <scene sceneID="BhO-oD-ptb">
@@ -573,7 +520,10 @@
             <point key="canvasLocation" x="-1165.5" y="1387.5"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Page3" width="640" height="640"/>
+    </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="SL5-35-FJD"/>
+        <segue reference="3yt-fl-KkC"/>
     </inferredMetricsTieBreakers>
 </document>
