Reworded body header and added correct font

--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -60,7 +60,12 @@ body p {
 
 //#####  3 Image Row below banner
 
-
+h5 {
+  font: 800 1.5rem/2.4 Raleway;
+  padding-bottom: 1rem;
+  padding-top: 1rem;
+  
+}
 
 ul.imagelist {
   
