--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -41,7 +41,7 @@ ul.imagelist.small-block-grid-3
 .middle
   .row.panel
   
-    h5#body_text Coming Soon!
+    h5#body_text COMING IN 2015!
     p
       | Welcome to ColorSisters! ColorSisters is the only color accurate e-commerce discovery platform that simplifies finding the ideal color cosmetic products to achieve your desired look designed specifically for your skin tone.
     p
