Reworded label on source field

--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -17,7 +17,7 @@
         .large-6.columns.medium-6.small-12
           = f.input :email          
         .columns.large-6.medium-6.small-12
-          = f.input :source, label: "Invitation code if you received one"
+          = f.input :source, label: "If you received an invitation code, enter below"
       .row
         .large-6.columns.medium-6.small-12        
           = f.input :receive_emails, as: :boolean, boolean_style: :inline
